Fixed z-index on back img

--- a/app/scss/_offer.scss
+++ b/app/scss/_offer.scss
@@ -40,7 +40,7 @@
       position: absolute;
       top: 0;
       left: 0;
-      z-index: 99;
+      z-index: 10;
       width: 100%;
     }
 
