--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1156,7 +1156,7 @@ nav .menu-item a {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 99;
+  z-index: 10;
   width: 100%;
 }
 .offer__image img {
